created visual of building 1 and rooms. no code incorporated yet. WIP. Hope I did not mess up settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="fragment_boards_xml">fragment_boards.xml</string>
     <string name="floor_8">Floor 8</string>
     <string name="floor_7">Floor 7</string>
+    <string name="main_building_xxx">Main Building XXX</string>
 </resources>
